# real-time-edge-sysrepo

./: CMakeLists.txt  sysrepo-tsn.service.in
Instances/: cb-swp0-and-swp3-enable.xml  cb_stream_handle.xml  cbgen-swp0.xml  cbgen-swp3.xml  cbrec-swp0.xml  flow-meters-eno0-disable.xml  flow-meters-eno0-enable.xml  flow-meters-swp0-disable.xml  flow-meters-swp0-enable.xml  ietf-br-vlan-cfg.xml  ietf-ip-cfg.xml  ietf-police-rate.xml  ietf-vlan-cfg-disable.xml  ietf-vlan-cfg.xml  lldp.xml  ptp.xml  qbu-eth1.xml  qbu-swp0.xml  qbu-swp1.xml  qbv-eno0-disable.xml  qbv-eno0-enable.xml  qbv-eth1-enable.xml  qbv-swp0-disable.xml  qbv-swp0-enable.xml  stream-filters-eno0-disable.xml  stream-filters-eno0-enable.xml  stream-filters-swp0-disable.xml  stream-filters-swp0-enable.xml  stream-gates-eno0-disable.xml  stream-gates-eno0-enable.xml  stream-gates-swp0-disable.xml  stream-gates-swp0-enable.xml  stream_handle.xml  streamid-eno0-enable.xml  streamid-swp0-enable.xml  switch_qci_disable.xml  switch_qci_enable.xml
modules/: iana-if-type@2020-01-10.yang  ieee802-dot1cb-frer.yang  ieee802-dot1cb-stream-identification-types.yang  ieee802-dot1q-bridge.yang  ieee802-dot1q-psfp.yang  ieee802-dot1q-qci-augment@2024-12-18.yang  ieee802-dot1q-sched.yang
scripts/: install-tsn-yang.sh  model-install.sh
src/: brtc_cfg.c  brtc_cfg.h  cb.c  cb.h  cb_streamid.c  cb_streamid.h  common.c  common.h  file_mon.c  file_mon.h  ip_cfg.c  ip_cfg.h  lldp-plugin.c  lldp.c  lldp.h  log.h  mac_cfg.c  mac_cfg.h  main.c  main.h  ptp-plugin.c  ptp.c  ptp.h  qbu.c  qbu.h  qbv.c  qbv.h  qci.c  qci.h  qci_fm.c  qci_sf.c  qci_sg.c  tsn-plugin.c  vlan_cfg.c  vlan_cfg.h
